unpackaged/main/default/objects/Docket__c/Docket__c.object-meta.xml
<CustomObject>
    <label>Docket</label>
    <nameField>
        <label>Docket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dockets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>