unpackaged/main/default/objects/Docket__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Include any general information/details regarding the docket.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>