unpackaged/main/default/objects/Docket__c/fields/Funding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Funding_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Opportunity</label>
    <referenceTo>FundingOpportunity</referenceTo>
    <relationshipLabel>Dockets</relationshipLabel>
    <relationshipName>Dockets</relationshipName>
    <type>Lookup</type>
</CustomField>