unpackaged/main/default/objects/Docket__c/fields/Requests_in_Docket__c.field-meta.xml
<CustomField>
    <fullName>Requests_in_Docket__c</fullName>
    <inlineHelpText>Auto-calculated field for number of opportunities associated with the campaign. Note: in most cases 1 Opp = 1 Gift (or grant in FC). However there are some exceptions: e.g. recurring donations will result in multiple Opps (1 per month until the CC exp).</inlineHelpText>
    <label>Requests in Docket</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>