unpackaged/main/default/objects/Docket__c/fields/Value_Requests_in_Docket__c.field-meta.xml
<CustomField>
    <fullName>Value_Requests_in_Docket__c</fullName>
    <inlineHelpText>Calculated field for the amount of all individual applications associated with the docket regardless of their internal status. Main implication: Pledged Opportunities  related to a recurring donation (i.e. future instalments) are included.</inlineHelpText>
    <label>Value Requests in Docket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>