unpackaged/main/default/objects/Docket__c/fields/Value_Won_Requests_in_Docket__c.field-meta.xml
<CustomField>
    <fullName>Value_Won_Requests_in_Docket__c</fullName>
    <inlineHelpText>Calculated field for the amount of all individual applications associated with the docket with a status that&#39;s considered a &quot;Won&quot; Stage.</inlineHelpText>
    <label>Value Won Requests in Docket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>