unpackaged/main/default/objects/Docket__c/fields/Won_Requests_in_Docket__c.field-meta.xml
<CustomField>
    <fullName>Won_Requests_in_Docket__c</fullName>
    <inlineHelpText>Calculated field for number of &quot;Won&quot; opportunities associated with the campaign. Won opportunities are those whose Stage is defined as A &quot;Won&quot; stage (e.g. Hard Pledge is a &quot;Won&quot; stage, but &quot;Projected&quot; is an &quot;Open&quot; stage).</inlineHelpText>
    <label>Won Requests in Docket</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>